# rust_pdf_signing

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  rust.yml
examples/: sign_doc.rs
examples/assets/: keystore-local-chain.pem  keystore-local-key.pem  keystore-local.p12
src/: digitally_sign.rs  image_insert_to_page.rs  image_xobject.rs  lib.rs  ltv.rs  signature_image.rs  signature_info.rs  signature_options.rs  user_signature_info.rs
